--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         margin-right: auto;
         width: 50%;
       }
-      #Biography {
+      #biography {
         background-color: white;
         border: 1px solid black;
       }
@@ -17,13 +17,13 @@
   </head>
   <body style="background-color:lightgray">
     <h1 style="font-family:courier;text-align:center;font-size:50px">Alan Turing</h1>
-    <img src="./images/alan-turing.jpg" class="center" style="width:200px;height:250px;">
+    <img src="./images/alan-turing.jpg" alt="Alan Turing" class="center" style="width:200px;height:250px;">
    <h2 style="font-family:courier;text-align:center">Pioneer of Computer Science and LGBT Rights Icon</h2>
    <h3 style="font-family:courier;text-align:center;font-size:21px">1912-1954</h3>
    <q class="center" style="text-align:center;font-family:courier">We can only see a short distance ahead, but we can see plenty there that needs to be done.</q>
    <hr>
    <h3 style="font-family:courier;text-align:center">Biography</h3>
-   <ul id="Biography" class="center">
+   <ul id="biography" class="center">
      <li>Alan Turing was born on June 23, 1912.</li>
      <li>He attended St Michael's Primary School where his high intelligence became prominent.</li>
      <li>At the age of 13, Turing attended Sherborne School where he was considered a genius. He also met his "first love" Christopher Morcom, who died of tuberculosis in 1930.</li>
@@ -32,5 +32,6 @@
      <li>In 1939, Turing was asked to join the Government Codes and Cypher School, a British code-breaking organisation, where he deciphered Nazi Germany's ENIGMA code, allowing the Allied Forces to intercept German messages.</li>
      <li>After the war, Turing was discovered to be in a homosexual relationship. He avoided prison time by instead accepting chemical castration. He was then removed from the code-breaking organization.</li>
      <li>Alan Turing was found dead on June 7, 1954 from cyanide poisoning. It's widely believed that he commited suicide, but could have also been potentially the consequence to accidental inhalation of cyanide fumes during an experiment.</li>
+    </ul>
   </body>
 </html>
